--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Chilanka&display=swap');
+
+
+body{
+
   margin: 0;
   padding: 0px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Chilanka', cursive;
 }
 
 #App {
@@ -134,6 +138,89 @@ body {
   padding: 0 20px;
 }
 
-.extra-space {
-  margin-bottom: 50000px;
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1 {
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567899904/ux-788002_640.jpg");
+  grid-column: 1 / 3;
+  grid-row: 1/3;
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* opacity: 0.1;
+  display: block; */
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.item2 {
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/wordpress-923188_640.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 3/ 4;
+  grid-row: 1/2;
+  /* height: 400px; */
+}
+
+.item3 {
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/lean-startup-2230822_640.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 3/ 4;
+  grid-row: 2/3;
+  /* height: 400px; */
+}
+
+.item4 {
+  grid-column: 4/ 6;
+  grid-row: 1/2;
+  /* height: 400px; */
+}
+
+
+.item5 {
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900349/seo-758264_640.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  
+  grid-column: 1/ 3;
+  grid-row: 3/4;
+  height: 200px; 
+}
+
+.item6{
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/cms-265128_640.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 3/ 4;
+  grid-row: 3/4;
+  /* height: 200px;  */
+}
+
+.item7{
+  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900604/ux-789162_640.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 4/ 6;
+  grid-row: 2/4;
+  /* height: 200px;  */
 }
