--- a/src/App.css
+++ b/src/App.css
@@ -138,89 +138,180 @@ body{
   padding: 0 20px;
 }
 
-
-.grid-container {
+.grid-gallery {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-auto-rows: 200px;
+  /* grid-gap: 1rem; */
+  grid-auto-flow: row dense;
+  /* padding-top: 30px */
   
 }
 
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
+@media all and (min-width: 320px) {
+  .grid-gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media all and (min-width: 768px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .grid-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+.grid-gallery__item:nth-child(11n+1) {
+  grid-column: span 3;
+  grid-row: span 2;
+  overflow: hidden;
+}
+
+.grid-gallery__item:nth-child(11n+4) {
+  grid-column: span 2;
+  grid-row: span 1;
+  overflow: hidden;
+}
+
+.grid-gallery__item:nth-child(11n+6) {
+  grid-column: span 1;
+  grid-row: span 1;
+  overflow: hidden;
+}
+
+.grid-gallery__item:nth-child(11n+7) {
+  grid-column: span 1;
+  grid-row: span 2;
+  overflow: hidden;
+}
+
+.grid-gallery__item:nth-child(11n+8) {
+  grid-column: span 2;
+  grid-row: span 2;
+  overflow: hidden;
+}
+
+.grid-gallery__item:nth-child(11n+9) {
+  grid-row: span 3;
+}
+
+.grid-gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+figure{
+  margin: 0;
+  height: 100%;
+}
+
+
+.parent {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.child {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: all .5s;
+}
+
+/* Several different images */
+.bg-1 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567899904/ux-788002_640.jpg);}
+.bg-2 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/wordpress-923188_640.jpg);}
+.bg-3 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/lean-startup-2230822_640.jpg);}
+.bg-4 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900349/seo-758264_640.jpg);}
+.bg-5 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/cms-265128_640.jpg);}
+.bg-6 {background-image: url(https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900604/ux-789162_640.jpg);}
+
+
+a {
+  display: none;
+  color: #ffffff !important;
   text-align: center;
-  padding: 20px 0;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 50px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.parent:hover .child, .parent:focus .child {
+    transform: scale(1.2);
+}
+
+.parent:hover .child:before, .parent:focus .child:before {
+    display: block;
+}
+
+.parent:hover a, .parent:focus a {
+    display: block;
+}
+
+.child:before {
+  content: "";
+  display: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(252,82,83,0.4);
+}
+footer
+.container-footer{
+  height: 200px;
+  display: flex;
+  justify-content:space-around;
+  
+
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+  position: relative;
+  height: auto;
+}
+.fa {
+  padding: 20px;
   font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
 }
 
-.item1 {
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567899904/ux-788002_640.jpg");
-  grid-column: 1 / 3;
-  grid-row: 1/3;
-  height: 400px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* opacity: 0.1;
-  display: block; */
-  transition: .5s ease;
-  backface-visibility: hidden;
-}
-
-.item2 {
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/wordpress-923188_640.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  grid-column: 3/ 4;
-  grid-row: 1/2;
-  /* height: 400px; */
-}
-
-.item3 {
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/lean-startup-2230822_640.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  grid-column: 3/ 4;
-  grid-row: 2/3;
-  /* height: 400px; */
-}
-
-.item4 {
-  grid-column: 4/ 6;
-  grid-row: 1/2;
-  /* height: 400px; */
-}
-
-
-.item5 {
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900349/seo-758264_640.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;}
   
-  
-  grid-column: 1/ 3;
-  grid-row: 3/4;
-  height: 200px; 
-}
+  UL{
+    display: flex;
+    justify-content:space-around;
+  }
 
-.item6{
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900348/cms-265128_640.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  grid-column: 3/ 4;
-  grid-row: 3/4;
-  /* height: 200px;  */
-}
-
-.item7{
-  background: url("https://res.cloudinary.com/dzxpqumj0/image/upload/v1567900604/ux-789162_640.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  grid-column: 4/ 6;
-  grid-row: 2/4;
-  /* height: 200px;  */
-}
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
